--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -72,11 +72,11 @@
     
       <!-- View Selector  -->
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title" checked>
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title">
         <label class="form-check-label text-light" for="titleRadio">Work</label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition">
+        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition" checked>
         <label class="form-check-label text-light" for="editionRadio">Edition</label>
       </div>
       <div class="form-check form-check-inline">
