--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -13,7 +13,7 @@
     <div id="users">
 
     <div class="row">
-      <div class="col-lg-12 col-md-12">
+      <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="icon-box">
           <div class="icon"><i class="bi bi-search" style="color: #330e40;" no-repeat center center fixed;"></i></div>
           
