--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -68,7 +68,7 @@
   
 
   <div  class="row">
-    <div class="col-lg-12 col-md-12">
+    <div class="col-lg-12 col-md-12 col-sm-12">
     
       <!-- View Selector  -->
       <div class="form-check form-check-inline">
