--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a style="color: #330e40;"href="{% url 'index' %}" class="logo"><img style="margin-bottom: 6px;" src="{% static '/img/logo.png %}" alt="" class="img-fluid">&nbsp Database of Early English Playbooks</a>
+      <a style="color: #330e40;"href="{% url 'index' %}" class="logo"><img style="margin-bottom: 6px;" src="{% static '/img/logo.png' %}" alt="" class="img-fluid">&nbsp Database of Early English Playbooks</a>
       <!-- Uncomment below if you prefer to use text as a logo -->
       <!-- <h1 class="logo"><a href="index.html">Butterfly</a></h1> -->
 
