try different background

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -342,7 +342,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/*--------------------------------------------------------------
+
 # Sections General
 --------------------------------------------------------------*/
 section {
@@ -352,7 +352,9 @@ section {
 
 .section-bg {
   /* background-color: #f4fbfe; */ 
-  background-image: url('../img/holly.svg'), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(62,29,130,1) 0%, rgba(103,29,130,1) 100%);
+  /* background-image: url('../img/holly.svg'), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(62,29,130,1) 0%, rgba(103,29,130,1) 100%); */
+  background-image: url('../img/back.png');
+  background-color: #6200ff;;
 }
 
 .section-title {
