--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -353,7 +353,7 @@ section {
 .section-bg {
   /* background-color: #f4fbfe; */ 
   /* background-image: url('../img/holly.svg'), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(62,29,130,1) 0%, rgba(103,29,130,1) 100%); */
-  background-image: url('../img/back.png');
+  background-image: url('../img/back.jpg');
   background-color: #6200ff;;
 }
 
