request for white background

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -73,18 +73,18 @@
       <!-- View Selector  -->
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="titleRadio" value="title">
-        <label class="form-check-label text-light" for="titleRadio">Work</label>
+        <label class="form-check-label" for="titleRadio">Work</label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="editionRadio" value="edition" checked>
-        <label class="form-check-label text-light" for="editionRadio">Edition</label>
+        <label class="form-check-label" for="editionRadio">Edition</label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="recordRadio" value="record">
-        <label class="form-check-label text-light" for="recordRadio">Record</label>
+        <label class="form-check-label " for="recordRadio">Record</label>
       </div>
       <div class="form-check form-check-inline">
-        <h6 class="text-light">Results: <span id="resultCount">0</span></h4>
+        <h6 class="">Results: <span id="resultCount">0</span></h4>
       </div>
       
       <button id="expandAllButton" class="btn btn-light float-end" onclick="expandAll(this);">Expand all</button>
