--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -14,6 +14,7 @@ body {
   font-style: normal;
   /* font-family: "Open Sans", sans-serif; */
   color: #444444;
+  background-color: #ffffff;;
 }
 
 a {
@@ -69,7 +70,6 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  padding: 20px 0;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.05);
 }
 
@@ -353,8 +353,6 @@ section {
 .section-bg {
   /* background-color: #f4fbfe; */ 
   /* background-image: url('../img/holly.svg'), linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(62,29,130,1) 0%, rgba(103,29,130,1) 100%); */
-  background-image: url('../img/back.jpg');
-  background-color: #6200ff;;
 }
 
 .section-title {
@@ -607,10 +605,9 @@ section {
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
-  padding: 30px;
   position: relative;
   /* overflow: hidden; */
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 0 10px 40px 10px;
   background: #fff;
   box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
