--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -14,7 +14,7 @@ body {
   font-style: normal;
   /* font-family: "Open Sans", sans-serif; */
   color: #444444;
-  background-color: #ffffff;;
+  background-color: #EDE7F6;;
 }
 
 a {
