--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,14 +51,16 @@
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li class="nav-link scrollto dropdown"><a href="../about/"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="nav-link scrollto dropdown"><span>About</span> <i class="bi bi-chevron-down"></i>
             <ul>
-              <li><a href="../cite/">How to Cite DEEP</a></li> 
-              <li><a href="../contact/">Contact Us</a></li>
+              <li><a href="../about/">The History behind DEEP</a></li>
               <li><a href="../using_deep/">How to Use DEEP</a></li>
               <li><a href="../whats_new/">DEEP Update History</a></li>
-              <li><a href="../download">Download Data</a></li>
               <li><a href="../sources/">Bibliographic Sources</a></li>
+              <li><a href="../abbrev/">Abbreviations and References</a></li>
+              <li><a href="../download">Download Data</a></li>
+              <li><a href="../cite/">How to Cite DEEP</a></li> 
+              <li><a href="../contact/">Contact Us</a></li>
               <!-- <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li> -->
             </ul>
