--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li class="nav-link scrollto dropdown"><span>About</span> <i class="bi bi-chevron-down"></i>
+          <li class="nav-link scrollto dropdown"><span class="text-dark">About</span> <i class="bi bi-chevron-down text-dark"></i>
             <ul>
               <li><a href="../about/">The History behind DEEP</a></li>
               <li><a href="../using_deep/">How to Use DEEP</a></li>
