--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li class="nav-link scrollto dropdown"><span class="text-dark">About</span> <i class="bi bi-chevron-down text-dark"></i>
+          <li class="nav-link scrollto dropdown text-dark"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="../about/">The History behind DEEP</a></li>
               <li><a href="../using_deep/">How to Use DEEP</a></li>
@@ -61,10 +61,9 @@
               <li><a href="../download">Download Data</a></li>
               <li><a href="../cite/">How to Cite DEEP</a></li> 
               <li><a href="../contact/">Contact Us</a></li>
-              <!-- <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li> -->
             </ul>
           </li>
+          
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
