#225 temp remove footer

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -79,10 +79,8 @@
 </main><!-- End #main -->
 
 <!-- ======= Footer ======= -->
-<footer id="footer">
-
-
-</footer><!-- End Footer -->
+<!-- <footer id="footer"></footer> -->
+<!-- End Footer -->
 
 
 
