--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -14,7 +14,7 @@ body {
   font-style: normal;
   /* font-family: "Open Sans", sans-serif; */
   color: #444444;
-  background-color: #EDE7F6;;
+  background-color: #e6e5d6;
 }
 
 a {
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   font-style: normal;
 
-  font-size: 28px;
+  font-size: 35px;
   margin: 0;
   padding: 0;
   line-height: 1;
