--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -92,12 +92,12 @@
     <tbody class="list">
       <thead>
         <tr>
-          <th class="sort col-1" data-sort="result_number" data-default-order='desc' scope="col"></th>
-          <th class="sort col-2" data-sort="deep_id" data-default-order='desc' scope="col">DEEP #</th>
-          <th class="sort col-2" data-sort="year" data-default-order='desc' scope="col">Year</th>
-          <th class="sort col-2" data-sort="author" scope="col">Author</th>
-          <th class="sort col-7" data-sort="title" scope="col">Title</th>
-          <th class="col-1"></th>
+			<th class="col-num sort col-1" data-sort="result_number" data-default-order='desc' scope="col"></th>
+			<th class="col-deep sort col-2" data-sort="deep_id" data-default-order='desc' scope="col">DEEP #</th>
+			<th class="col-year sort col-2" data-sort="year" data-default-order='desc' scope="col">Year</th>
+			<th class="col-author sort col-2" data-sort="author" scope="col">Author</th>
+			<th class="col-title sort col-7" data-sort="title" scope="col">Title</th>
+			<th class="col-expand col-1"></th>
         </tr>
       </thead>
       
