Menu Icon, Icon Row, Expand Icons
Lots of changes to do with icons!
Issues:
#245
#236
#212

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -50,8 +50,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li class="nav-link scrollto dropdown text-dark"><a href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+			<li class="nav-link scrollto dropdown text-dark"><a href="#"><span><img class="menuIcon" src="assets/img/menu.png" alt="Menu Icon"></span>
+				<!--							<i class="bi bi-chevron-down"></i>-->
+			</a>
+				<ul>
               <li><a href="../about/">The History behind DEEP</a></li>
               <li><a href="../using_deep/">How to Use DEEP</a></li>
               <li><a href="../whats_new/">DEEP Update History</a></li>
