--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-			<li class="nav-link scrollto dropdown text-dark"><a href="#"><span><img class="menuIcon" src="assets/img/menu.png" alt="Menu Icon"></span>
+			<li class="nav-link scrollto dropdown text-dark"><a href="#"><span><img class="menuIcon" src="{% static '/img/menu.png' %}" alt="Menu Icon"></span>
 				<!--							<i class="bi bi-chevron-down"></i>-->
 			</a>
 				<ul>
