--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -350,7 +350,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 section {
   padding: 60px 0;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .section-bg {
@@ -1359,15 +1359,15 @@ section {
 }
 
 .col-year {
-    width: 6%;
+    width: 9%;
 }
 
 .col-author {
-    width: 25%;
+    width: 24%;
 }
 
 .col-title {
-    width: 46.5%;
+    width: 45.5%;
 }
 
 .col-recordType {
@@ -1375,7 +1375,7 @@ section {
 }
 
 .col-expand {
-    width: 4%;
+    width: 3%;
 }
 
 .spacing {
@@ -1404,7 +1404,8 @@ section {
 }
 
 .caretRow {
-    height: 12px;
+    height: 8px;
+    opacity: 0.6;
 }
 
 .iconColumn {
@@ -1412,6 +1413,125 @@ section {
     vertical-align: middle;
 }
 
+/* Updated Header */
+
+.awwsHeader {
+    padding: 20px;
+    background-color: #fff;
+    z-index: 997;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    max-width: 100vw;
+}
+
+.awwsHeaderContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1140px;
+    margin: 0 auto;
+    grid-gap: 20px;
+}
+
 .menuIcon {
     height: 20px;
 }
+
+.headerLogo {
+    max-height: 90px;
+}
+
+.awwsTitle {
+    font-family: birch-std, serif;
+    font-style: normal;
+    font-size: 52px;
+    margin: 0;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: #330e40;
+    text-align: center;
+}
+
+.awwsNavContainer {
+    position: relative;
+    display: inline-block;
+}
+
+.awwsNavLinks {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    z-index: 1;
+    left: -200px;
+    min-width: 200px;
+    background-color: #fff;
+    margin: 0 auto;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+}
+
+.awwsNavContainer:hover .awwsNavLinks {
+    display: flex;
+}
+
+.awwsNavLinks a {
+    color: black;
+    font-size: 18px;
+    font-family: trade-gothic-next, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    padding: 12px 16px;
+}
+
+.awwsNavLinks a:hover {
+    background-color: #d8d8d8;
+}
+
+@media only screen and (max-width: 800px) {
+
+    .awwsTitle {
+        font-size: 38px;
+    }
+    .awwsNavLinks {
+        width: 100vw;
+        height: 100vh;
+        box-shadow: none;
+        right: -20px;
+        top: 80px;
+        left: auto;
+
+        padding-top: 20px;
+    }
+    .awwsNavLinks a {
+        text-align: center;
+    }
+    .headerLogo {
+        max-height: 65px;
+    }
+}
+
+.iconTT {
+    visibility: hidden;
+
+    position: absolute;
+    z-index: 1;
+    margin-top: -40px;
+    margin-left: -90px;
+
+    width: 180px;
+    background-color: #fffde5;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
+}
+
+.iconColumn:hover .iconTT {
+    visibility: visible;
+}
+
