fixes to hamburger and expand collapse after pull 249

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -77,7 +77,7 @@
 		<img src="/assets/img/logo.png" alt="" class="headerLogo">
 		<h1 class="awwsTitle">Database of Early English Playbooks</h1>
 		<div class="awwsNavContainer">
-			<img class="menuIcon" src="assets/img/menu.png" alt="Menu Icon" onclick="navToggle()">
+			<img class="menuIcon" src="{% static 'img/menu.png' %}" alt="Menu Icon" onclick="navToggle()">
 			<div id="awwsNavDisplay" class="awwsNavLinks">
 				<a href="../about/">The History behind DEEP</a>
 				<a href="../using_deep/">How to Use DEEP</a>
