--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -74,7 +74,7 @@
 
 <div class="awwsHeader">
 	<div class="awwsHeaderContent">
-		<img src="/assets/img/logo.png" alt="" class="headerLogo">
+		<a href="{% url 'index' %}"><img src="/assets/img/logo.png" alt="DEEP Logo" class="headerLogo"></a>
 		<h1 class="awwsTitle">Database of Early English Playbooks</h1>
 		<div class="awwsNavContainer">
 			<img class="menuIcon" src="assets/img/menu.png" alt="Menu Icon" onclick="navToggle()">
