--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -9,7 +9,7 @@
 
 <!-- ======= Search Section ======= -->
 <section id="search" class="services section-bg">
-  <div style="margin-top:80px; min-height: 600px;" class="container" >
+  <div style="min-height: 600px;" class="container" >
     <div id="users">
 
     <div class="row">
