Fixed header link implementation

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -74,10 +74,8 @@
 
 <div class="awwsHeader">
 	<div class="awwsHeaderContent">
-		<a href="{% url 'index' %}">
-			<img src="/assets/img/logo.png" alt="DEEP Logo" class="headerLogo">
-			<h1 class="awwsTitle">Database of Early English Playbooks</h1>
-		</a>
+		<a href="{% url 'index' %}"><img src="/assets/img/logo.png" alt="DEEP Logo" class="headerLogo"></a>
+		<a href="{% url 'index' %}"><h1 class="awwsTitle">Database of Early English Playbooks</h1></a>
 		<div class="awwsNavContainer">
 			<img class="menuIcon" src="assets/img/menu.png" alt="Menu Icon" onclick="navToggle()">
 			<div id="awwsNavDisplay" class="awwsNavLinks">
